@@ -124,7 +124,7 @@ class IVMainTabs(QtGui.QWidget) :
         for itab in range(len(self.tab_names)) :
             tab_name = self.current_tab.value()
             if tab_name == self.tab_names[itab] :
-               self.gui_win = IVTabDataControl(cp, log, parent=None, show_mode=014) if tab_name=='Data' else\
+               self.gui_win = IVTabDataControl(cp, log, parent=None, show_mode=017, show_mode_evctl=017) if tab_name=='Data' else\
                               IVTabFileName(parent=None, show_mode=01)    if tab_name=='File' else\
                               QtGui.QTextEdit('Window for %s'%self.tab_names[itab])
 
