@@ -14,9 +14,12 @@ class IVTabDataControl(QWDataControl) :
     """ Data control parameters window for tab "Data"
         derived from QWDataControl to connect signals with IV-app recipients
     """
-    def __init__(self, cp, log, parent=None, show_mode=017) :
+    def __init__(self, cp, log, parent=None, show_mode=017, show_mode_evctl=017) :
         QWDataControl.__init__(self, cp, log, parent=None, orient='V', show_mode=show_mode)
         self._name = self.__class__.__name__
+
+        #self.event_control().set_show_mode(show_mode_evctl)
+        self.w_evt.set_show_mode(show_mode_evctl)
 
         if cp.ivmain is None : return
         self.w_evt.connect_new_event_number_to(cp.ivmain.on_new_event_number)
@@ -40,7 +43,9 @@ if __name__ == "__main__" :
     from graphqt.Logger import log
 
     app = QtGui.QApplication(sys.argv)
-    w = IVTabDataControl(cp, log, show_mode=0377)
+    w = IVTabDataControl(cp, log, show_mode=0377, show_mode_evctl=017)
+    #w = IVTabDataControl(cp, log, show_mode=0377, show_mode_evctl=017)
+    #w.event_control().set_show_mode(show_mode=017)
     w.move(QtCore.QPoint(50,50))
     w.setWindowTitle(w._name)
     w.w_evt.connect_new_event_number_to(w.test_on_new_event_number_reception)
